--- a/package.json
+++ b/package.json
@@ -1,5 +1,200 @@
 {
-  "name": "learn-rails",
+  "name": "invoca_web_app",
+  "version": "0.0.1",
+  "description": "Package that declares all dependencies needed by all the backdraft apps and plugins used in Invoca Web app",
+  "main": "index.js",
+  "scripts": {
+    "eslint": "./node_modules/.bin/eslint",
+    "setup": "yarn global add grunt-cli",
+    "test": "TZ=America/Los_Angeles jest",
+    "coverage": "jest --coverage; open coverage/index.html",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook --output-dir public/storybook",
+    "generate": "plop",
+    "build-github-action": "ncc build .github/actions/check_pr_for_string/action.js -o .github/actions/check_pr_for_string/dist"
+  },
+  "browserify-shim": "./backdraft/browserify_shim.js",
+  "author": "\"\"",
+  "license": "ISC",
+  "repository": "https://github.com/Invoca/web",
   "private": true,
-  "dependencies": {}
+  "engines": {
+    "node": "^10.15.0"
+  },
+  "devDependencies": {
+    "@storybook/addon-storyshots": "5.2.4",
+    "babel-jest": "^24.7.1",
+    "babel-plugin-require-context-hook": "^1.0.0",
+    "enzyme": "^3.10.0",
+    "enzyme-adapter-react-16": "^1.7.1",
+    "enzyme-to-json": "^3.6.1",
+    "eslint": "^4.19.1",
+    "express": "4.10.2",
+    "grunt-contrib-coffee": "0.13.0",
+    "grunt-contrib-copy": "0.8.2",
+    "grunt-contrib-jasmine": "^2.2.0",
+    "grunt-contrib-watch": "^1.1.0",
+    "grunt-eslint": "^20.1.0",
+    "history": "^4.0.0",
+    "identity-obj-proxy": "^3.0.0",
+    "jasmine-ajax": "^2.0.1",
+    "jasmine-core": "~2.4.0",
+    "jasmine-enzyme": "^6.0.3",
+    "jest": "^24.7.1",
+    "jest-canvas-mock": "^2.3.1",
+    "jest-environment-enzyme": "^7.0.2",
+    "jest-enzyme": "^7.0.2",
+    "jest-prop-type-error": "^1.1.0",
+    "jest-transform-graphql": "^2.1.0",
+    "karma": "^4.3.0",
+    "karma-chrome-launcher": "^3.1.0",
+    "karma-jasmine": "^1.1.1",
+    "karma-sourcemap-loader": "^0.3.7",
+    "karma-spec-reporter": "^0.0.32",
+    "karma-webpack": "3.0.0",
+    "plop": "^2.5.3",
+    "promise-mock": "^2.1.0",
+    "puppeteer": "^1.15.0",
+    "redux-mock-store": "1.5.3",
+    "resize-observer-polyfill": "^1.5.1",
+    "sinon": "^7.3.2",
+    "style-guide": "Invoca/style-guide#2a3fb4b4b1ae16d569e59c59fe5685bca144f355",
+    "webpack-bundle-analyzer": "3.x",
+    "webpack-dev-server": "3.x"
+  },
+  "dependencies": {
+    "@actions/core": "^1.4.0",
+    "@actions/github": "^5.0.0",
+    "@apollo/react-hooks": "^3.1.0",
+    "@apollo/react-testing": "^3.1.2",
+    "@babel/core": "7.x",
+    "@babel/plugin-proposal-class-properties": "7.x",
+    "@babel/plugin-proposal-object-rest-spread": "7.x",
+    "@babel/preset-env": "7.x",
+    "@babel/preset-react": "^7.0.0",
+    "@honeybadger-io/js": "3.2.7",
+    "@invoca/titan-feature-administration": "0.0.58",
+    "@invoca/titan-patterns": "0.0.32",
+    "@material-ui/core": "^4.8.3",
+    "@nivo/bar": "^0.62.0",
+    "@rails/webpacker": "^4.0.7",
+    "@storybook/addon-a11y": "5.2.4",
+    "@storybook/addon-actions": "5.2.4",
+    "@storybook/addon-docs": "5.2.4",
+    "@storybook/addon-knobs": "5.2.4",
+    "@storybook/addon-links": "5.2.4",
+    "@storybook/addons": "5.2.4",
+    "@storybook/preset-typescript": "^1.1.0",
+    "@storybook/react": "5.2.4",
+    "@vercel/ncc": "^0.29.0",
+    "@vx/scale": "^0.0.182",
+    "@vx/zoom": "^0.0.189",
+    "apollo-boost": "^0.4.4",
+    "apollo-boost-upload": "^1.0.1",
+    "apollo-cache-inmemory": "^1.6.3",
+    "apollo-utilities": "^1.3.2",
+    "babel-eslint": "^10.0.1",
+    "babel-loader": "^8.0.5",
+    "babel-plugin-react-docgen": "^3.1.0",
+    "babelify": "^10.0.0",
+    "backbone": "1.1.2",
+    "backdraft-app": "1.3.3",
+    "bootstrap": "4.3.1",
+    "bootstrap-colorpicker": "2.3.3",
+    "bootstrap-switch": "3.3.4",
+    "browserify": "12.0.1",
+    "browserify-shim": "3.8.11",
+    "classnames": "^2.2.6",
+    "core-js": "^3.2.1",
+    "create-react-class": "^15.6.3",
+    "d3-cloud": "^1.2.5",
+    "d3-force": "^2.0.1",
+    "d3-hierarchy": "^1.1.8",
+    "dateformat": "1.0.12",
+    "dayjs": "^1.9.6",
+    "deepdash": "^5.3.7",
+    "emoji-mart": "^3.0.0",
+    "emoji-toolkit": "^6.0.1",
+    "exports-loader": "^0.7.0",
+    "focus-trap-react": "^8.9.0",
+    "formik": "^1.5.1",
+    "fs-extra": "4.0.2",
+    "fuzzysort": "^1.1.4",
+    "graphql": "^14.5.4",
+    "graphql-tag": "^2.10.1",
+    "grunt": "1.4.1",
+    "grunt-browserify": "6.0.0",
+    "grunt-cli": "1.2.0",
+    "grunt-contrib-jst": "2.0.0",
+    "grunt-contrib-sass": "0.9.2",
+    "grunt-contrib-uglify": "4.x",
+    "grunt-timer": "0.6.0",
+    "highcharts": "7.0.3",
+    "highcharts-react-official": "2.0.0",
+    "highlight-words-core": "^1.2.2",
+    "immutable": "3.8.1",
+    "imports-loader": "^0.8.0",
+    "jquery": "jquery/jquery#1.10.2",
+    "jquery-deparam": "^0.4.2",
+    "jquery-migrate": "1.2.1",
+    "jquery-textfill": "^0.6.0",
+    "jquery-ui": "1.12.0",
+    "js-yaml": "^3.8.4",
+    "jsonpointer": "^4.0.1",
+    "load-grunt-tasks": "^4.0.0",
+    "lodash": "^4.17.11",
+    "lodash.get": "^4.4.2",
+    "lodash.setwith": "^4.3.2",
+    "moment": "^2.9.0",
+    "moment-timezone": "^0.5.16",
+    "mousetrap": "^1.6.2",
+    "node-fetch": "^2.6.1",
+    "popper.js": "1.15.0",
+    "process-jest-results": "link:packages/process-jest-results/",
+    "prop-types": "^15.6.2",
+    "pusher-js": "^4.3.1",
+    "qs": "^6.7.0",
+    "rc-slider": "^9.6.5",
+    "react": "^16.10.0",
+    "react-ace": "^6.4.0",
+    "react-beforeunload": "^2.2.0",
+    "react-bootstrap": "^1.4.0",
+    "react-card-flip": "^1.1.0",
+    "react-dates": "^21.5.1",
+    "react-docgen-typescript-loader": "^3.3.0",
+    "react-dom": "^16.10.0",
+    "react-dropzone": "^10.2.2",
+    "react-grid-layout": "^1.0.0",
+    "react-infinite-scroll-component": "^5.1.0",
+    "react-js-pagination": "^3.0.2",
+    "react-linkify": "^1.0.0-alpha",
+    "react-mentions": "^4.0.2",
+    "react-minimal-pie-chart": "^5.0.1",
+    "react-moment": "^0.9.7",
+    "react-redux": "^6.0.0",
+    "react-resize-detector": "^6.7.6",
+    "react-router-dom": "^5.0.0",
+    "react-select": "^4.3.0",
+    "react-spring": "^8.0.7",
+    "react-toast-notifications": "^2.2.5",
+    "reactstrap": "^8.10.0",
+    "recharts": "^1.8.5",
+    "redux": "3.7.2",
+    "redux-thunk": "2.1.x",
+    "regenerator-runtime": "^0.13.3",
+    "seedrandom": "^3.0.3",
+    "select2": "4.0.5",
+    "shelljs": "0.7.8",
+    "source-map-loader": "^0.2.3",
+    "storybook-addon-designs": "^6.0.0-alpha.3",
+    "traverse": "^0.6.6",
+    "ts-loader": "^6.2.0",
+    "underscore": "1.8.3",
+    "underscore-template-loader": "^1.0.0",
+    "underscore.string": "3.3.5",
+    "webpack": "4.x",
+    "whatwg-fetch": "^3.0.0",
+    "yup": "0.32.11"
+  }
 }
+
